--- a/patient-view-fe/package.json
+++ b/patient-view-fe/package.json
@@ -13,7 +13,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "sass": "^1.26.10",
+    "scss": "^0.2.4",
+    "style-loader": "^1.2.1",
+    "terra-card": "^3.34.0",
+    "terra-content-container": "^3.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^4.3.0",
+    "ts-loader": "^8.0.3",
+    "typescript": "^3.9.7",
+    "typings-for-css-modules-loader": "^1.7.0"
   }
 }
