--- a/patient-view-fe/package.json
+++ b/patient-view-fe/package.json
@@ -10,8 +10,9 @@
     "@types/node": "^12.12.56",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "anamnesis": "^1.2.1",
+    "chief-complaint-lung-alexandru": "^2.0.0",
     "com.training.physical-examination": "^1.0.3",
-    "anamnesis": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
