--- a/patient-view-fe/package.json
+++ b/patient-view-fe/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^12.12.56",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "anamnesis": "^1.2.0",
+    "anamnesis": "^1.2.1",
     "chief-complaint-lung-alexandru": "^2.0.0",
     "com.training.physical-examination": "^1.0.3",
     "patient-banner": "^1.0.0",
@@ -21,7 +21,8 @@
     "scss": "^0.2.4",
     "style-loader": "^1.2.1",
     "terra-card": "^3.34.0",
-    "terra-content-container": "^3.30.0"
+    "terra-content-container": "^3.30.0",
+    "vital-signs-spv": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
